Implement auto complete for editor + refactor multiple things internally